<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.mati.spiewnik.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/alfabetycznieButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/alfabetycznie" />

        <Button
            android:id="@+id/wgStronButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wedlugStron" />

        <Button
            android:id="@+id/wgKolorowButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wedlugkolorow" />

        <Button
            android:id="@+id/zestawyPiesniButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zestawyPiesni" />

        <Button
            android:id="@+id/wlasnyZestawButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wlasnaLista" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:orientation="horizontal"
        android:rowCount="1" >

        <Space
            android:id="@+id/Space1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_vertical"
            android:layout_row="1" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/about" />
    </RelativeLayout>

</LinearLayout>